--- a/css/style.css
+++ b/css/style.css
@@ -336,7 +336,7 @@ TYPEWRITER
   display: grid;
   grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
   grid-template-rows: 7rem 1fr;
-  grid-gap: 3rem; }
+  grid-gap: 5rem; }
   .skills h2 {
     grid-row: 1 / 2;
     grid-column: 2 / 3;
@@ -355,31 +355,28 @@ TYPEWRITER
     grid-column: 2 / 3;
     display: grid;
     grid-template-columns: 25% repeat(3, 1fr) 25%;
-    grid-template-rows: .15fr 1fr .15fr;
+    grid-template-rows: 1fr;
     justify-content: center;
     align-items: center; }
-  .skills__row-1 {
+  .skills__col-1 {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    padding: 1rem;
-    display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1rem;
-    place-items: center; }
-  .skills__row-2 {
-    grid-column: 3 / 4;
-    grid-row: 1 / -1;
     padding: 1rem;
     display: grid;
     grid-template-rows: repeat(4, 1fr);
     grid-gap: 1rem;
     place-items: center; }
-  .skills__row-3 {
-    grid-column: 4 / 5;
-    grid-row: 2 / 3;
+  .skills__col-2 {
+    grid-column: 3 / 4;
     padding: 1rem;
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-gap: 1rem;
+    place-items: center; }
+  .skills__col-3 {
+    grid-column: 4 / 5;
+    padding: 1rem;
+    display: grid;
+    grid-template-rows: repeat(4, 1fr);
     grid-gap: 1rem;
     place-items: center; }
   .skills__item {
@@ -389,10 +386,11 @@ TYPEWRITER
     justify-content: space-around;
     padding: .8rem 5rem 1.2rem;
     width: 18rem;
+    box-shadow: 0 1.5rem 2rem rgba(0, 0, 0, 0.4);
+    transition: all .3s ease;
     /*
         *
             Gradient Border: 
-
                 'padding-box' and 'border-box' values represent the background-clip values
 
                 first linear gradient is limited to padding-box: it's a fake gradient because
@@ -406,6 +404,43 @@ TYPEWRITER
     background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to bottom right, #30475E, #DA0037) border-box;
     border-radius: 10%;
     border: 3.5px solid transparent; }
+    .skills__item:hover, .skills__item:active {
+      animation: border-light .75s ease;
+      animation-iteration-count: infinite; }
+
+@keyframes border-light {
+  from, to {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to bottom right, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  12% {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to bottom, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  25% {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to bottom left, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  37% {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to left, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  50% {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to top left, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  62% {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to top, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  75% {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to top right, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  87% {
+    background: linear-gradient(#EDEDED, #EDEDED) padding-box, linear-gradient(to right, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; } }
 
 .skills__item > img {
   padding-bottom: 1.5rem;
@@ -419,7 +454,52 @@ TYPEWRITER
   height: 2rem;
   background: #DA0037; }
 
-.dark-mode > main > .skills > .skills__container > .skills__row-1 > .skills__item,
-.dark-mode > main > .skills > .skills__container > .skills__row-2 > .skills__item,
-.dark-mode > main > .skills > .skills__container > .skills__row-3 > .skills__item {
-  background: linear-gradient(black, black) padding-box, linear-gradient(to bottom right, #DA0037, #30475E) border-box; }
+.dark-mode > main > .skills > .skills__container > .skills__col-1 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__col-2 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__col-3 > .skills__item {
+  background: linear-gradient(black, black) padding-box, linear-gradient(to bottom right, #30475E, #DA0037) border-box; }
+  .dark-mode > main > .skills > .skills__container > .skills__col-1 > .skills__item:hover, .dark-mode > main > .skills > .skills__container > .skills__col-1 > .skills__item:active,
+  .dark-mode > main > .skills > .skills__container > .skills__col-2 > .skills__item:hover,
+  .dark-mode > main > .skills > .skills__container > .skills__col-2 > .skills__item:active,
+  .dark-mode > main > .skills > .skills__container > .skills__col-3 > .skills__item:hover,
+  .dark-mode > main > .skills > .skills__container > .skills__col-3 > .skills__item:active {
+    animation: border-dark 1s ease;
+    animation-iteration-count: infinite; }
+
+@keyframes border-dark {
+  from, to {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to bottom right, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  12% {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to bottom, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  25% {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to bottom left, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  37% {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to left, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  50% {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to top left, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  62% {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to top, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  75% {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to top right, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; }
+  87% {
+    background: linear-gradient(black, black) padding-box, linear-gradient(to right, #30475E, #DA0037) border-box;
+    border-radius: 10%;
+    border: 3.5px solid transparent; } }
+
+.dark-mode > main > .skills > .skills__container > .skills__col-1 > .skills__item > img[src="img/flask-logo.png"] {
+  -webkit-filter: invert(100%);
+  filter: invert(100%); }
