--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -5,10 +5,7 @@
     display: grid;
     grid-template-columns: minmax(1rem, 10rem) 1fr minmax(1rem, 10rem);
     grid-template-rows: 7rem 1fr;
-    grid-gap: 3rem;
-
-    // align-items: center;
-    // justify-content: center;
+    grid-gap: 5rem;
 
     h2 {
         grid-row: 1 / 2;
@@ -35,33 +32,23 @@
 
         display: grid;
         grid-template-columns: 25% repeat(3, 1fr) 25%;
-        grid-template-rows: .15fr 1fr .15fr;
+        grid-template-rows: 1fr;
+        // grid-template-rows: .15fr 1fr .15fr;
         justify-content: center;
         align-items: center;
         // grid-gap: 3.5rem;
     }
 
-    &__row {
-
-        // display: flex;
-        // flex-direction: column;
-        // justify-content: space-evenly;
-        // align-items: center;
+    &__col {
 
         &-1 {
             grid-column: 2 / 3;
-            grid-row: 2 / 3;
-            // background-color: green;
+            // grid-row: 2 / 3;
+
             padding: 1rem;
 
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: center;
-            // align-items: center;
-            // justify-content: space-evenly;
-
             display: grid;
-            grid-template-rows: repeat(3, 1fr);
+            grid-template-rows: repeat(4, 1fr);
             grid-gap: 1rem;
 
             place-items: center;
@@ -69,15 +56,8 @@
 
         &-2 {
             grid-column: 3 / 4;
-            grid-row: 1 / -1;
-            // background-color: crimson;
+            // grid-row: 1 / -1;
             padding: 1rem;
-
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: center;
-            // align-items: center;
-            // justify-content: space-evenly;
 
             display: grid;
             grid-template-rows: repeat(4, 1fr);
@@ -88,18 +68,12 @@
 
         &-3 {
             grid-column: 4 / 5;
-            grid-row: 2 / 3;
-            // background-color: purple;
+            // grid-row: 2 / 3;
+
             padding: 1rem;
 
-            // display: flex;
-            // flex-direction: column;
-            // justify-content: center;
-            // align-items: center;
-            // justify-content: space-evenly;
-
             display: grid;
-            grid-template-rows: repeat(3, 1fr);
+            grid-template-rows: repeat(4, 1fr);
             grid-gap: 1rem;
 
             place-items: center;
@@ -112,16 +86,16 @@
         align-items: center;
         justify-content: space-around;
 
-        // height: 100px;
-        // width: 160px;
-
         padding: .8rem 5rem 1.2rem;
         width: 18rem;
+
+        box-shadow: 0 1.5rem 2rem rgba(0,0,0,.4);
+
+        transition: all .3s ease;
 
         /*
         *
             Gradient Border: 
-
                 'padding-box' and 'border-box' values represent the background-clip values
 
                 first linear gradient is limited to padding-box: it's a fake gradient because
@@ -137,6 +111,71 @@
             linear-gradient(to bottom right, $color-tertiary, $color-secondary) border-box;
         border-radius: 10%;
         border: 3.5px solid transparent;
+
+        &:hover,
+        &:active {
+            animation: border-light .75s ease;
+            animation-iteration-count: infinite;
+        }
+    }
+}
+
+@keyframes border-light {
+    from, to {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to bottom right, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    12% {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to bottom, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    25% {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to bottom left, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    37% {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to left, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    50% {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to top left, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    62% {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to top, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    75% {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to top right, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    87% {
+        background: 
+            linear-gradient($color-primary-light, $color-primary-light) padding-box,
+            linear-gradient(to right, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
     }
 }
 
@@ -144,12 +183,6 @@
     padding-bottom: 1.5rem;
     width: auto;
     height: 8rem;
-    // max-width: 100%;
-    // height: 10rem;
-    // object-fit: cover;
-    // display: block;
-    // width: auto;
-    // height: auto;
 }
 
 .dark-mode > main > .skills > h2::before {
@@ -163,10 +196,81 @@
 }
 
 // toggles bg-color inside skills boxes
-.dark-mode > main > .skills > .skills__container > .skills__row-1 > .skills__item,
-.dark-mode > main > .skills > .skills__container > .skills__row-2 > .skills__item,
-.dark-mode > main > .skills > .skills__container > .skills__row-3 > .skills__item {
+.dark-mode > main > .skills > .skills__container > .skills__col-1 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__col-2 > .skills__item,
+.dark-mode > main > .skills > .skills__container > .skills__col-3 > .skills__item {
     background: 
         linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
-        linear-gradient(to bottom right, $color-secondary, $color-tertiary) border-box;
+        linear-gradient(to bottom right, $color-tertiary, $color-secondary) border-box;
+
+    &:hover,
+    &:active {
+        animation: border-dark 1s ease;
+        animation-iteration-count: infinite;
+    }
+}
+
+@keyframes border-dark {
+    from, to {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to bottom right, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    12% {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to bottom, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    25% {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to bottom left, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    37% {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to left, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    50% {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to top left, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    62% {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to top, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    75% {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to top right, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+    87% {
+        background: 
+            linear-gradient($color-primary-darkest, $color-primary-darkest) padding-box,
+            linear-gradient(to right, $color-tertiary, $color-secondary) border-box;
+        border-radius: 10%;
+        border: 3.5px solid transparent;
+    }
+}
+
+.dark-mode > main > .skills > .skills__container > .skills__col-1 > .skills__item > img[src="img/flask-logo.png"] {
+    // invert png so black becomes white, and vice versa
+    -webkit-filter: invert(100%);
+    filter: invert(100%);
 }
